@startuml

package  anoncreds.repo {

interface PublicRepo
interface LocalRepo
interface IssuerLocalRepo
interface ProverLocalRepo

LocalRepo <|-- IssuerLocalRepo
LocalRepo <|-- ProverLocalRepo

}


package  anoncreds.wallet {

class Wallet
class Wallet <|-- IssuerWallet
class Wallet <|-- ProverWallet

Wallet o-- PublicRepo
Wallet o-- LocalRepo

IssuerWallet o-- IssuerLocalRepo
ProverWallet o-- ProverLocalRepo
}


package  anoncreds {

class Issuer
class Prover
class Verifier

Issuer o-- IssuerWallet
Prover o-- ProverWallet
Verifier o-- Wallet
}

package  indy.anoncreds #DDDDDD {

Issuer <|-- IndyIssuer
Prover <|-- IndyProver
Verifier <|-- IndyVerifier

PublicRepo <|-- IndyPublicRepo
}


@enduml
